<resources>
    <string name="app_name">FestiApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="error_invalid_email">Cette adresse mail n\'est pas valide</string>
    <string name="error_invalid_password">Ce mot de passe est trop court</string>
    <string name="error_incorrect_password">Ce mot de passe est incorect</string>
    <string name="error_field_required">Champs requis</string>
    <string name="permission_rationale">"Permission d'accéder aux contacts requise pour compléter adresses mail."
    </string>
    <string name="title_activity_main">Mon Compte</string>

    <string name="navigation_drawer_open">Ouvrir</string>
    <string name="navigation_drawer_close">Fermer</string>

    <string name="action_settings">Paramètres</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="mail">Adresse mail</string>
    <string name="greeting">Bonjour!</string>
    <string name="surname">Prénom</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="birthdate">Date de naissance</string>
    <string name="steam">Compte Steam</string>
    <string name="battleTag">BattleTag</string>
    <string name="lol">Compte LoL</string>
    <string name="qrInstructions">Présente ce code à l\'entrée et pour consommer tes achats cuisine </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Notifications</string>

    <string name="default_notification_channel_id">default</string>
    <string name="header_tournament">Tournois</string>
    <string name="pref_lol">League of Legends</string>
    <string name="pref_csgo">CS: GO</string>
    <string name="pref_ow">Overwatch</string>
    <string name="pref_hs">Hearthstone</string>
    <string name="pref_anim">Animations</string>
    <string name="pref_meal">Repas</string>
    <string name="pref_prices">Remises des Prix</string>
    <string name="sum_tournament">Être notifié lorsqu\'une partie commence</string>
    <string name="pref_sum_anim">Être notifié lors du début d\'une animations</string>
    <string name="pref_sum_meal">Être notifié lorsque la cuisine est ouverte</string>
    <string name="pref_sum_prices">Être notifié pour les cérémonies des remises de prix</string>
    <string name="header_miscellaneous">Divers</string>
    <string name="notif_title">Notifications</string>
    <string name="account_title">Mon Compte</string>
</resources>
