<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:orientation="vertical"
    tools:context="com.example.flavia.fg_user_app.AccountFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/fullname"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/mail"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mail" />

    <android.support.v7.widget.AppCompatImageView
        android:minWidth="80sp"
        android:id="@+id/qrcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <android.support.v7.widget.AppCompatTextView
        android:text="TEST"
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/birthdate" />

    <android.support.v7.widget.AppCompatTextView
        android:text="TEST"
        android:id="@+id/birthdate"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
